--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2019.11.28
 chardet==3.0.4
 cycler==0.10.0
+hupper==1.9.1
 idna==2.8
 joblib==0.14.1
 kiwisolver==1.1.0
@@ -9,8 +10,12 @@ matplotlib==3.1.3
 numpy==1.18.1
 pandas==1.0.1
 pandas-datareader==0.8.1
+PasteDeploy==2.1.0
 patsy==0.5.1
+plaster==1.0
+plaster-pastedeploy==0.7
 pyparsing==2.4.6
+pyramid==1.10.4
 python-dateutil==2.8.1
 pytz==2019.3
 requests==2.22.0
@@ -19,4 +24,9 @@ scipy==1.4.1
 six==1.14.0
 sklearn==0.0
 statsmodels==0.11.0
+translationstring==1.3
 urllib3==1.25.8
+venusian==3.0.0
+WebOb==1.8.6
+zope.deprecation==4.4.0
+zope.interface==4.7.1
